fixed spacing

--- a/coursepage.css
+++ b/coursepage.css
@@ -40,7 +40,7 @@
 
 .leis-homepagetext {
   width: 80%;
-  text-align: center;
+  text-align: left;
   font-size: larger;
 }
 
